added by header and flower section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower And Plants</title>
-</head>
-<body>
-<header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- inter font style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,    14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <!-- noto sherif font style -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-</header>
-<main>
-
-</main>
-<footer>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-</footer>
-</body>
+    <title>Flower And Plants</title>
+    <link rel="stylesheet" href="./styles/style.css">
+  </head>
+  <body>
+    <header>
+      <div class="head-logo width">
+        <figure>
+        <img src="./assets/logo.png" alt="" />
+        </figure>
+
+        <nav>
+          <ul class="navbar">
+            <li><a class="home-bar bold-mini boldd" href="">Home</a></li>
+            <li><a class="boldd" href="">Shop</a></li>
+            <li><a class="boldd" href="">About us</a></li>
+             <li><a class="home-bar cart-item" href=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56) </a></li>
+            
+          </ul>
+        </nav>
+      </div>
+      <div class="width flower margin-top">
+        <div class="flower-bgc-head">
+      <h1 class="noto-serif flower-title">ALWAYS <span class="fonts-color">FRESH FLOWERS</span></h1>
+        <p class="flower-description paragraph-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p></div>
+        <div>
+            <img class="flower-image" src="./assets/hero-flower.png" alt="">
+        </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
