added our plant section

--- a/index.html
+++ b/index.html
@@ -52,44 +52,53 @@
       <div class="plant">
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
       <div class="plant-item">
         <img src="./assets/sample-flower-image.png" alt="">
-        <p class="paragraph-color">Lily Blossom</p>
-        <h5>20 USD</h5>
+        <p class="flower-name inter">Lily Blossom</p>
+        <h5 class="flower-price">20 USD</h5>
+        <button class="btn-primary inter">ADD TO CART</button>
       </div>
+     
       </div>
       </section>
     </main>
