added responsive style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="width flower margin-top">
         <div class="flower-bgc-head">
-      <h1 class="noto-serif flower-title">ALWAYS <span class="fonts-color">FRESH FLOWERS</span></h1>
+      <h1 class="noto-serif flower-title">ALWAYS <span class="fonts-color">FRESH <br> FLOWERS</span></h1>
         <p class="flower-description paragraph-color inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p></div>
         <div>
             <img class="flower-image" src="./assets/hero-flower.png" alt="">
@@ -47,7 +47,7 @@
         <section>
       <div class="our-plant">
         <h2 class="plant-family noto-serif"> <span class="fonts-color">Our </span>Plants</h2>
-        <p class="paragraph-color inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <p class="paragraph-color inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
       </div>
       <div class="plant">
       <div class="plant-item">
