added bunch section

--- a/index.html
+++ b/index.html
@@ -128,10 +128,44 @@
           </div>
         </div>
       </section>
-      <section class="">
+      <section class="latest-deal">
+        <div class="latest-title">
+        <h1 class="latest-name "><span class="fonts-color">Latest </span> Deals</h1>
+        <p class="paragraph-color inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+        <div class="latest-plant-image">
+          <div class="bloom-ana">
+            <div class="bloom-text">
+          <img class="bloom-image" src="./assets/deal-bloom.png" alt="bloom plant picture">
+          <h3 class="bloom-shop noto-serif" style="color: white;"> 60% Off | Bloom Plant</h3>
+           <h4 class="shop-now inter" style="color: white;">Shop Now</h4>
+          </div>
+          <div class="ana-text">
+          <img class="ana-image" src="./assets/deal-ana.png" alt="ana plant picture">
+          <h3 class="ana-shop noto-serif"  style="color: white;">30% Off | Ana Plant</h3>
+           <h4 class="shop-now inter"  style="color: white;">Shop Now</h4>
+          </div>
+          </div>
+          <div class="zabo-text">
+          <img class="zabo-image" src="./assets/deal-zabo.png" alt="zabo plant picture">
+          <h1 class="zabo-shop noto-serif"  style="color: white;">25% Off | Zabo Plant</h1>
+          <h4 class="zabo-now inter"  style="color: white;">Shop Now</h4>
+          </div>
+        </div>
 
       </section>
+      
     </main>
+    <section class="">
+        <img class="news-letter " id="news-letter" src="./assets/news-letter-bg.png" alt="">
+        <div class="bunch-email-btn">
+          <h1 class="colorfull-bunch noto-serif">Join the colorful Bunch</h1>
+          <div class="subscribe">
+            <input class="email-type" type="email" name="" id="" placeholder="Write Email">
+            <button class="btn-primary inter" id="footer-btn">Subscribe</button>
+          </div>
+        </div>
+      </section>
     <footer>
 
     </footer>
