added responsive style

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <main>
       <section>
         <div class="our-plant">
-          <h2 class="plant-family noto-serif">
-            <span class="fonts-color">Our </span>Plants
+          <h2 class="plant-family font-size noto-serif">
+            <span class="fonts-color ">Our </span>Plants
           </h2>
           <p class="paragraph-color inter">
             Indulge your senses with the beauty and fragrance of our fresh
@@ -177,8 +177,8 @@
       </section>
       <section class="latest-deal">
         <div class="latest-title">
-          <h1 class="latest-name">
-            <span class="fonts-color">Latest </span> Deals
+          <h1 class="latest-name font-size">
+            <span class="fonts-color latest">Latest </span> Deals
           </h1>
           <p class="paragraph-color inter">
             Indulge your senses with the beauty and fragrance of our fresh
@@ -197,7 +197,7 @@
               <h3 class="bloom-shop noto-serif" style="color: white">
                 60% Off | Bloom Plant
               </h3>
-            <button>  <h4 class="shop-now inter" style="color: white">Shop Now</h4> </button>
+            <h4 class="shop-now inter" style="color: white"> Shop Now   </h4>
             </div>
             <div class="ana-text">
               <img
@@ -208,7 +208,7 @@
               <h3 class="ana-shop noto-serif" style="color: white">
                 30% Off | Ana Plant
               </h3>
-            <button> <h4 class="shop-now inter" style="color: white">Shop Now</h4> </button> 
+           <h4 class="shop-now inter" style="color: white">Shop Now</h4> 
             </div>
           </div>
           <div class="zabo-text">
@@ -220,7 +220,7 @@
             <h1 class="zabo-shop noto-serif" style="color: white">
               25% Off | Zabo Plant
             </h1>
-           <button><h4 class="zabo-now inter" style="color: white">Shop Now</h4> </button>  
+           <h4 class="zabo-now inter" style="color: white">Shop Now</h4> 
           </div>
         </div>
       </section>
