added some style in footer

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         
         <div class="subscribe">
           <h1 class="colorfull-bunch noto-serif" id="colorfull-bunch">Join the colorful Bunch</h1>
-          <div>
+          <div class="email-button">
           <input
             class="email-type"type="email"
             name="" id=""placeholder="Write Email" />
